--- a/style.css
+++ b/style.css
@@ -6,16 +6,9 @@ body {
 #logo {
     font-size: 40px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: transparent;
-    -webkit-text-stroke: 1px #fff;
+    color: white;
     font-weight: 75; 
     padding: 10px;
-    background: url(backtext2.jpg);
-    background-position: 0 0;
-    animation: back 20s linear infinite;
-}
-@keyframes back{
-  100%{background-position: 2000px 0;}
 }
 
 #picture {
